--- a/FFNodes.Server/FFNodes.Server.csproj
+++ b/FFNodes.Server/FFNodes.Server.csproj
@@ -7,13 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Collections\" />
-    <Folder Include="Model\" />
     <Folder Include="Utilities\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Chase.FFmpeg" Version="0.1.0" />
+    <PackageReference Include="Chase.FFmpeg.Extra" Version="0.0.7" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FFNodes.Core\FFNodes.Core.csproj" />
   </ItemGroup>
 
 </Project>
