--- a/FFNodes.Core/FFNodes.Core.csproj
+++ b/FFNodes.Core/FFNodes.Core.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
