--- a/FFNodes.Client.Service/FFNodes.Client.Service.csproj
+++ b/FFNodes.Client.Service/FFNodes.Client.Service.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -26,4 +26,5 @@
   <ItemGroup>
     <ProjectReference Include="..\FFNodes.Core\FFNodes.Core.csproj" />
   </ItemGroup>
+  
 </Project>
